--- a/NEURAL_ARCHITECTURE_SEARCH_WITH_MULTIMODAL_FUSION_METHODS4DIAGNOSING_DEMENTIA.ipynb
+++ b/NEURAL_ARCHITECTURE_SEARCH_WITH_MULTIMODAL_FUSION_METHODS4DIAGNOSING_DEMENTIA.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPKG6qZT+NkowECQAUaR9if",
+      "authorship_tag": "ABX9TyMyHsJHKBymORFmzmw8KSXp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,12 +28,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "id": "ZDCDHbYzNp2n"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ZDCDHbYzNp2n",
+        "outputId": "32958fcc-71c2-47a5-eaa3-7f42deadb156"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mounted at /content/drive\n"
+          ]
+        }
+      ],
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
+      ]
     }
   ]
 }
