--- a/NEURAL_ARCHITECTURE_SEARCH_WITH_MULTIMODAL_FUSION_METHODS4DIAGNOSING_DEMENTIA.ipynb
+++ b/NEURAL_ARCHITECTURE_SEARCH_WITH_MULTIMODAL_FUSION_METHODS4DIAGNOSING_DEMENTIA.ipynb
@@ -402,7 +402,21 @@
             "  Attempting uninstall: nvidia-cudnn-cu12\n",
             "    Found existing installation: nvidia-cudnn-cu12 9.3.0.75\n",
             "    Uninstalling nvidia-cudnn-cu12-9.3.0.75:\n",
-            "      Successfully uninstalled nvidia-cudnn-cu12-9.3.0.75\n"
+            "      Successfully uninstalled nvidia-cudnn-cu12-9.3.0.75\n",
+            "  Attempting uninstall: nvidia-cusolver-cu12\n",
+            "    Found existing installation: nvidia-cusolver-cu12 11.6.3.83\n",
+            "    Uninstalling nvidia-cusolver-cu12-11.6.3.83:\n",
+            "      Successfully uninstalled nvidia-cusolver-cu12-11.6.3.83\n",
+            "Successfully installed nvidia-cublas-cu12-12.4.5.8 nvidia-cuda-cupti-cu12-12.4.127 nvidia-cuda-nvrtc-cu12-12.4.127 nvidia-cuda-runtime-cu12-12.4.127 nvidia-cudnn-cu12-9.1.0.70 nvidia-cufft-cu12-11.2.1.3 nvidia-curand-cu12-10.3.5.147 nvidia-cusolver-cu12-11.6.1.9 nvidia-cusparse-cu12-12.3.1.170 nvidia-nvjitlink-cu12-12.4.127 pydub-0.25.1 speechrecognition-3.14.3\n",
+            "=== AD Detection Model Setup ===\n",
+            "\n",
+            "Checking dataset files...\n",
+            "✓ Found: ADReSSo21-diagnosis-train.tgz\n",
+            "✓ Found: ADReSSo21-progression-test.tgz\n",
+            "✓ Found: ADReSSo21-progression-train.tgz\n",
+            "\n",
+            "Extracting datasets...\n",
+            "Extracting ADReSSo21-diagnosis-train.tgz...\n"
           ]
         }
       ]
