--- a/NEURAL_ARCHITECTURE_SEARCH_WITH_MULTIMODAL_FUSION_METHODS4DIAGNOSING_DEMENTIA.ipynb
+++ b/NEURAL_ARCHITECTURE_SEARCH_WITH_MULTIMODAL_FUSION_METHODS4DIAGNOSING_DEMENTIA.ipynb
@@ -416,7 +416,11 @@
             "✓ Found: ADReSSo21-progression-train.tgz\n",
             "\n",
             "Extracting datasets...\n",
-            "Extracting ADReSSo21-diagnosis-train.tgz...\n"
+            "Extracting ADReSSo21-diagnosis-train.tgz...\n",
+            "✓ Extracted to /content/drive/MyDrive/Voice/ADReSSo21-diagnosis-train\n",
+            "Extracting ADReSSo21-progression-test.tgz...\n",
+            "✓ Extracted to /content/drive/MyDrive/Voice/ADReSSo21-progression-test\n",
+            "Extracting ADReSSo21-progression-train.tgz...\n"
           ]
         }
       ]
