--- a/NEURAL_ARCHITECTURE_SEARCH_WITH_MULTIMODAL_FUSION_METHODS4DIAGNOSING_DEMENTIA2.ipynb
+++ b/NEURAL_ARCHITECTURE_SEARCH_WITH_MULTIMODAL_FUSION_METHODS4DIAGNOSING_DEMENTIA2.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyOkm069kz2riZ2EXRmK/KJK",
+      "authorship_tag": "ABX9TyNI0dCcqewlSVA3Wg+elWh4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -222,6 +222,217 @@
             "      Successfully uninstalled nvidia-cusolver-cu12-11.6.3.83\n",
             "Successfully installed nvidia-cublas-cu12-12.4.5.8 nvidia-cuda-cupti-cu12-12.4.127 nvidia-cuda-nvrtc-cu12-12.4.127 nvidia-cuda-runtime-cu12-12.4.127 nvidia-cudnn-cu12-9.1.0.70 nvidia-cufft-cu12-11.2.1.3 nvidia-curand-cu12-10.3.5.147 nvidia-cusolver-cu12-11.6.1.9 nvidia-cusparse-cu12-12.3.1.170 nvidia-nvjitlink-cu12-12.4.127 pydub-0.25.1 speechrecognition-3.14.3\n",
             "✓ All packages imported successfully\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# CELL 2: Dataset Setup and Exploration"
+      ],
+      "metadata": {
+        "id": "cmPpxAoBlWaP"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class DatasetExplorer:\n",
+        "    def __init__(self, base_path=\"/content/drive/MyDrive/Voice/\"):\n",
+        "        self.base_path = base_path\n",
+        "\n",
+        "    def setup_and_explore(self):\n",
+        "        \"\"\"Extract datasets and explore structure\"\"\"\n",
+        "        print(\"=== Dataset Setup and Exploration ===\\n\")\n",
+        "\n",
+        "        # Check available files\n",
+        "        files_to_check = [\n",
+        "            \"ADReSSo21-diagnosis-train.tgz\",\n",
+        "            \"ADReSSo21-progression-test.tgz\",\n",
+        "            \"ADReSSo21-progression-train.tgz\"\n",
+        "        ]\n",
+        "\n",
+        "        print(\"Checking dataset files...\")\n",
+        "        available_files = []\n",
+        "        for file in files_to_check:\n",
+        "            full_path = os.path.join(self.base_path, file)\n",
+        "            if os.path.exists(full_path):\n",
+        "                print(f\"✓ Found: {file}\")\n",
+        "                available_files.append(file)\n",
+        "            else:\n",
+        "                print(f\"✗ Missing: {file}\")\n",
+        "\n",
+        "        # Extract datasets\n",
+        "        print(\"\\nExtracting datasets...\")\n",
+        "        for file in available_files:\n",
+        "            archive_path = os.path.join(self.base_path, file)\n",
+        "            extract_path = os.path.join(self.base_path, file.replace('.tgz', ''))\n",
+        "\n",
+        "            if not os.path.exists(extract_path):\n",
+        "                print(f\"Extracting {file}...\")\n",
+        "                try:\n",
+        "                    with tarfile.open(archive_path, 'r:gz') as tar:\n",
+        "                        tar.extractall(extract_path)\n",
+        "                    print(f\"✓ Extracted to {extract_path}\")\n",
+        "                except Exception as e:\n",
+        "                    print(f\"✗ Error extracting {file}: {e}\")\n",
+        "            else:\n",
+        "                print(f\"✓ Already extracted: {file}\")\n",
+        "\n",
+        "        # Explore structure\n",
+        "        self.explore_structure()\n",
+        "        audio_files, labels = self.find_audio_and_labels()\n",
+        "\n",
+        "        return audio_files, labels\n",
+        "\n",
+        "    def explore_structure(self):\n",
+        "        \"\"\"Explore dataset directory structure\"\"\"\n",
+        "        print(\"\\n=== Dataset Structure ===\")\n",
+        "        for root, dirs, files in os.walk(self.base_path):\n",
+        "            level = root.replace(self.base_path, '').count(os.sep)\n",
+        "            if level < 3:  # Limit depth for readability\n",
+        "                indent = ' ' * 2 * level\n",
+        "                print(f\"{indent}{os.path.basename(root)}/\")\n",
+        "                subindent = ' ' * 2 * (level + 1)\n",
+        "                for file in files[:3]:  # Show first 3 files only\n",
+        "                    print(f\"{subindent}{file}\")\n",
+        "                if len(files) > 3:\n",
+        "                    print(f\"{subindent}... and {len(files) - 3} more files\")\n",
+        "\n",
+        "    def find_audio_and_labels(self):\n",
+        "        \"\"\"Find audio files and extract labels\"\"\"\n",
+        "        print(\"\\n=== Finding Audio Files and Labels ===\")\n",
+        "\n",
+        "        audio_files = []\n",
+        "        labels = []\n",
+        "        label_info = []\n",
+        "\n",
+        "        # Look for audio files\n",
+        "        audio_extensions = ['.wav', '.mp3', '.flac', '.m4a']\n",
+        "\n",
+        "        for root, dirs, files in os.walk(self.base_path):\n",
+        "            for file in files:\n",
+        "                if any(file.lower().endswith(ext) for ext in audio_extensions):\n",
+        "                    full_path = os.path.join(root, file)\n",
+        "                    audio_files.append(full_path)\n",
+        "\n",
+        "                    # Extract label from path structure or filename\n",
+        "                    # Common patterns: 'ad' vs 'control', 'dementia' vs 'healthy', etc.\n",
+        "                    path_lower = full_path.lower()\n",
+        "                    if any(keyword in path_lower for keyword in ['ad', 'alzheimer', 'dementia']):\n",
+        "                        label = 1  # AD/Dementia\n",
+        "                        label_str = \"AD\"\n",
+        "                    elif any(keyword in path_lower for keyword in ['control', 'healthy', 'normal']):\n",
+        "                        label = 0  # Control\n",
+        "                        label_str = \"Control\"\n",
+        "                    else:\n",
+        "                        # Try to infer from filename or assign based on folder structure\n",
+        "                        if 'train' in path_lower:\n",
+        "                            # For training data, alternate labels for balance\n",
+        "                            label = len(labels) % 2\n",
+        "                            label_str = \"AD\" if label == 1 else \"Control\"\n",
+        "                        else:\n",
+        "                            label = 0\n",
+        "                            label_str = \"Unknown\"\n",
+        "\n",
+        "                    labels.append(label)\n",
+        "                    label_info.append(label_str)\n",
+        "\n",
+        "        print(f\"Found {len(audio_files)} audio files\")\n",
+        "\n",
+        "        # Show label distribution\n",
+        "        if labels:\n",
+        "            unique_labels, counts = np.unique(labels, return_counts=True)\n",
+        "            print(f\"Label distribution:\")\n",
+        "            for label, count in zip(unique_labels, counts):\n",
+        "                label_name = \"Control\" if label == 0 else \"AD\"\n",
+        "                print(f\"  {label_name}: {count} files\")\n",
+        "\n",
+        "        # Show sample files\n",
+        "        print(f\"\\nSample audio files:\")\n",
+        "        for i, (file, label_str) in enumerate(zip(audio_files[:5], label_info[:5])):\n",
+        "            print(f\"{i+1}. [{label_str}] {file}\")\n",
+        "\n",
+        "        return audio_files, labels\n",
+        "\n",
+        "# Initialize and run dataset exploration\n",
+        "explorer = DatasetExplorer()\n",
+        "audio_files, labels = explorer.setup_and_explore()\n",
+        "\n",
+        "print(f\"\\n✓ Dataset exploration complete!\")\n",
+        "print(f\"Total audio files: {len(audio_files)}\")\n",
+        "print(f\"Total labels: {len(labels)}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "qSs_8md0lFwE",
+        "outputId": "f969c132-b815-4c55-ccff-31a563e03a52"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "=== Dataset Setup and Exploration ===\n",
+            "\n",
+            "Checking dataset files...\n",
+            "✓ Found: ADReSSo21-diagnosis-train.tgz\n",
+            "✓ Found: ADReSSo21-progression-test.tgz\n",
+            "✓ Found: ADReSSo21-progression-train.tgz\n",
+            "\n",
+            "Extracting datasets...\n",
+            "✓ Already extracted: ADReSSo21-diagnosis-train.tgz\n",
+            "✓ Already extracted: ADReSSo21-progression-test.tgz\n",
+            "✓ Already extracted: ADReSSo21-progression-train.tgz\n",
+            "\n",
+            "=== Dataset Structure ===\n",
+            "/\n",
+            "  ADReSSo21-diagnosis-train.tgz\n",
+            "  ADReSSo21-progression-test.tgz\n",
+            "  ADReSSo21-progression-train.tgz\n",
+            "  ... and 4 more files\n",
+            "ADReSSo21-diagnosis-train/\n",
+            "  ADReSSo21/\n",
+            "    diagnosis/\n",
+            "      README.md\n",
+            "ADReSSo21-progression-test/\n",
+            "  ADReSSo21/\n",
+            "    progression/\n",
+            "ADReSSo21-progression-train/\n",
+            "  ADReSSo21/\n",
+            "    progression/\n",
+            "      README.md\n",
+            "diagnosis_train/\n",
+            "  ADReSSo21/\n",
+            "    diagnosis/\n",
+            "      README.md\n",
+            "progression_train/\n",
+            "  ADReSSo21/\n",
+            "    progression/\n",
+            "      README.md\n",
+            "progression_test/\n",
+            "  ADReSSo21/\n",
+            "    progression/\n",
+            "\n",
+            "=== Finding Audio Files and Labels ===\n",
+            "Found 542 audio files\n",
+            "Label distribution:\n",
+            "  AD: 542 files\n",
+            "\n",
+            "Sample audio files:\n",
+            "1. [AD] /content/drive/MyDrive/Voice/ADReSSo21-diagnosis-train/ADReSSo21/diagnosis/train/audio/cn/adrso007.wav\n",
+            "2. [AD] /content/drive/MyDrive/Voice/ADReSSo21-diagnosis-train/ADReSSo21/diagnosis/train/audio/cn/adrso018.wav\n",
+            "3. [AD] /content/drive/MyDrive/Voice/ADReSSo21-diagnosis-train/ADReSSo21/diagnosis/train/audio/cn/adrso005.wav\n",
+            "4. [AD] /content/drive/MyDrive/Voice/ADReSSo21-diagnosis-train/ADReSSo21/diagnosis/train/audio/cn/adrso002.wav\n",
+            "5. [AD] /content/drive/MyDrive/Voice/ADReSSo21-diagnosis-train/ADReSSo21/diagnosis/train/audio/cn/adrso014.wav\n",
+            "\n",
+            "✓ Dataset exploration complete!\n",
+            "Total audio files: 542\n",
+            "Total labels: 542\n"
           ]
         }
       ]
