got error from cell 3

--- a/NEURAL_ARCHITECTURE_SEARCH_WITH_MULTIMODAL_FUSION_METHODS4DIAGNOSING_DEMENTIA2.ipynb
+++ b/NEURAL_ARCHITECTURE_SEARCH_WITH_MULTIMODAL_FUSION_METHODS4DIAGNOSING_DEMENTIA2.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyNI0dCcqewlSVA3Wg+elWh4",
+      "authorship_tag": "ABX9TyNgaDQhBXiWJTkl7Mw+xkIM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -433,6 +433,241 @@
             "✓ Dataset exploration complete!\n",
             "Total audio files: 542\n",
             "Total labels: 542\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class EnhancedAudioFeatureExtractor:\n",
+        "    def __init__(self, sample_rate=16000, max_duration=30):\n",
+        "        self.sample_rate = sample_rate\n",
+        "        self.max_duration = max_duration\n",
+        "        self.feature_names = []\n",
+        "\n",
+        "    def extract_comprehensive_features(self, audio_path):\n",
+        "        \"\"\"Extract comprehensive acoustic features with better error handling\"\"\"\n",
+        "        try:\n",
+        "            # Load audio with duration limit\n",
+        "            y, sr = librosa.load(audio_path, sr=self.sample_rate, duration=self.max_duration)\n",
+        "\n",
+        "            if len(y) == 0:\n",
+        "                print(f\"Warning: Empty audio file {audio_path}\")\n",
+        "                return self._get_zero_features()\n",
+        "\n",
+        "            features = []\n",
+        "            feature_names = []\n",
+        "\n",
+        "            # 1. MFCC features (most important for speech)\n",
+        "            mfccs = librosa.feature.mfcc(y=y, sr=sr, n_mfcc=13)\n",
+        "            mfcc_stats = self._compute_statistical_features(mfccs, 'mfcc')\n",
+        "            features.extend(mfcc_stats['values'])\n",
+        "            feature_names.extend(mfcc_stats['names'])\n",
+        "\n",
+        "            # 2. Spectral features\n",
+        "            spectral_features = {\n",
+        "                'spectral_centroid': librosa.feature.spectral_centroid(y=y, sr=sr)[0],\n",
+        "                'spectral_rolloff': librosa.feature.spectral_rolloff(y=y, sr=sr)[0],\n",
+        "                'spectral_bandwidth': librosa.feature.spectral_bandwidth(y=y, sr=sr)[0],\n",
+        "                'spectral_contrast': librosa.feature.spectral_contrast(y=y, sr=sr).mean(axis=0),\n",
+        "                'spectral_flatness': librosa.feature.spectral_flatness(y=y)[0]\n",
+        "            }\n",
+        "\n",
+        "            for name, values in spectral_features.items():\n",
+        "                if values.ndim > 0:\n",
+        "                    stats = self._compute_statistical_features(values.reshape(1, -1), name)\n",
+        "                    features.extend(stats['values'])\n",
+        "                    feature_names.extend(stats['names'])\n",
+        "                else:\n",
+        "                    features.append(values)\n",
+        "                    feature_names.append(name)\n",
+        "\n",
+        "            # 3. Rhythmic features\n",
+        "            tempo, beats = librosa.beat.beat_track(y=y, sr=sr)\n",
+        "            features.append(tempo)\n",
+        "            feature_names.append('tempo')\n",
+        "\n",
+        "            # Beat consistency\n",
+        "            if len(beats) > 1:\n",
+        "                beat_intervals = np.diff(beats) / sr\n",
+        "                features.extend([\n",
+        "                    np.mean(beat_intervals),\n",
+        "                    np.std(beat_intervals),\n",
+        "                    np.var(beat_intervals)\n",
+        "                ])\n",
+        "                feature_names.extend(['beat_interval_mean', 'beat_interval_std', 'beat_interval_var'])\n",
+        "            else:\n",
+        "                features.extend([0, 0, 0])\n",
+        "                feature_names.extend(['beat_interval_mean', 'beat_interval_std', 'beat_interval_var'])\n",
+        "\n",
+        "            # 4. Zero crossing rate (speech activity)\n",
+        "            zcr = librosa.feature.zero_crossing_rate(y)[0]\n",
+        "            zcr_stats = self._compute_statistical_features(zcr.reshape(1, -1), 'zcr')\n",
+        "            features.extend(zcr_stats['values'])\n",
+        "            feature_names.extend(zcr_stats['names'])\n",
+        "\n",
+        "            # 5. Chroma features (harmonic content)\n",
+        "            chroma = librosa.feature.chroma_stft(y=y, sr=sr)\n",
+        "            chroma_stats = self._compute_statistical_features(chroma, 'chroma')\n",
+        "            features.extend(chroma_stats['values'])\n",
+        "            feature_names.extend(chroma_stats['names'])\n",
+        "\n",
+        "            # 6. Energy and power features\n",
+        "            rms_energy = librosa.feature.rms(y=y)[0]\n",
+        "            rms_stats = self._compute_statistical_features(rms_energy.reshape(1, -1), 'rms_energy')\n",
+        "            features.extend(rms_stats['values'])\n",
+        "            feature_names.extend(rms_stats['names'])\n",
+        "\n",
+        "            # 7. Formant-like features (using spectral peaks)\n",
+        "            stft = librosa.stft(y)\n",
+        "            magnitude = np.abs(stft)\n",
+        "            spectral_peaks = []\n",
+        "            for frame in range(min(10, magnitude.shape[1])):  # Sample few frames\n",
+        "                spectrum = magnitude[:, frame]\n",
+        "                peaks = self._find_spectral_peaks(spectrum)\n",
+        "                spectral_peaks.extend(peaks[:3])  # Top 3 peaks\n",
+        "\n",
+        "            if spectral_peaks:\n",
+        "                features.extend([\n",
+        "                    np.mean(spectral_peaks),\n",
+        "                    np.std(spectral_peaks),\n",
+        "                    np.max(spectral_peaks) if spectral_peaks else 0\n",
+        "                ])\n",
+        "            else:\n",
+        "                features.extend([0, 0, 0])\n",
+        "            feature_names.extend(['formant_mean', 'formant_std', 'formant_max'])\n",
+        "\n",
+        "            # Store feature names for first extraction\n",
+        "            if not self.feature_names:\n",
+        "                self.feature_names = feature_names.copy()\n",
+        "\n",
+        "            return np.array(features, dtype=np.float32)\n",
+        "\n",
+        "        except Exception as e:\n",
+        "            print(f\"Error extracting features from {audio_path}: {e}\")\n",
+        "            return self._get_zero_features()\n",
+        "\n",
+        "    def _compute_statistical_features(self, data, prefix):\n",
+        "        \"\"\"Compute statistical features from 2D array\"\"\"\n",
+        "        if data.ndim == 1:\n",
+        "            data = data.reshape(1, -1)\n",
+        "\n",
+        "        stats_values = []\n",
+        "        stats_names = []\n",
+        "\n",
+        "        for i in range(data.shape[0]):\n",
+        "            row = data[i]\n",
+        "            stats_values.extend([\n",
+        "                np.mean(row),\n",
+        "                np.std(row),\n",
+        "                np.var(row),\n",
+        "                np.max(row),\n",
+        "                np.min(row),\n",
+        "                np.median(row),\n",
+        "                np.percentile(row, 25),\n",
+        "                np.percentile(row, 75)\n",
+        "            ])\n",
+        "\n",
+        "            if data.shape[0] == 1:\n",
+        "                stats_names.extend([\n",
+        "                    f'{prefix}_mean', f'{prefix}_std', f'{prefix}_var',\n",
+        "                    f'{prefix}_max', f'{prefix}_min', f'{prefix}_median',\n",
+        "                    f'{prefix}_q25', f'{prefix}_q75'\n",
+        "                ])\n",
+        "            else:\n",
+        "                stats_names.extend([\n",
+        "                    f'{prefix}_{i}_mean', f'{prefix}_{i}_std', f'{prefix}_{i}_var',\n",
+        "                    f'{prefix}_{i}_max', f'{prefix}_{i}_min', f'{prefix}_{i}_median',\n",
+        "                    f'{prefix}_{i}_q25', f'{prefix}_{i}_q75'\n",
+        "                ])\n",
+        "\n",
+        "        return {'values': stats_values, 'names': stats_names}\n",
+        "\n",
+        "    def _find_spectral_peaks(self, spectrum, num_peaks=3):\n",
+        "        \"\"\"Find spectral peaks (simplified formant detection)\"\"\"\n",
+        "        try:\n",
+        "            from scipy.signal import find_peaks\n",
+        "            peaks, _ = find_peaks(spectrum, height=np.max(spectrum) * 0.1)\n",
+        "            if len(peaks) > 0:\n",
+        "                # Convert to Hz (assuming 22050 Hz max freq for simplicity)\n",
+        "                peak_freqs = peaks * (self.sample_rate // 2) / len(spectrum)\n",
+        "                return sorted(peak_freqs, reverse=True)[:num_peaks]\n",
+        "            else:\n",
+        "                return [0] * num_peaks\n",
+        "        except:\n",
+        "            return [0] * num_peaks\n",
+        "\n",
+        "    def _get_zero_features(self):\n",
+        "        \"\"\"Return zero feature vector for failed extractions\"\"\"\n",
+        "        # Estimate feature dimension based on typical extraction\n",
+        "        estimated_dim = 13*8 + 5*8 + 3 + 1*8 + 12*8 + 1*8 + 3  # Rough estimate\n",
+        "        return np.zeros(estimated_dim, dtype=np.float32)\n",
+        "\n",
+        "# Test feature extraction\n",
+        "print(\"=== Testing Enhanced Audio Feature Extraction ===\")\n",
+        "\n",
+        "extractor = EnhancedAudioFeatureExtractor()\n",
+        "\n",
+        "if audio_files:\n",
+        "    print(f\"Testing with: {audio_files[0]}\")\n",
+        "    test_features = extractor.extract_comprehensive_features(audio_files[0])\n",
+        "    print(f\"✓ Audio feature extraction successful!\")\n",
+        "    print(f\"Feature vector dimension: {len(test_features)}\")\n",
+        "    print(f\"Feature vector shape: {test_features.shape}\")\n",
+        "    print(f\"Sample features: {test_features[:10]}\")\n",
+        "\n",
+        "    # Test with multiple files to ensure consistency\n",
+        "    print(\"\\nTesting consistency with multiple files...\")\n",
+        "    feature_dims = []\n",
+        "    for i, audio_file in enumerate(audio_files[:min(5, len(audio_files))]):\n",
+        "        try:\n",
+        "            features = extractor.extract_comprehensive_features(audio_file)\n",
+        "            feature_dims.append(len(features))\n",
+        "            print(f\"File {i+1}: {len(features)} features\")\n",
+        "        except Exception as e:\n",
+        "            print(f\"File {i+1} failed: {e}\")\n",
+        "\n",
+        "    if len(set(feature_dims)) == 1:\n",
+        "        print(\"✓ Feature dimensions are consistent across files\")\n",
+        "    else:\n",
+        "        print(f\"⚠ Inconsistent feature dimensions: {set(feature_dims)}\")\n",
+        "else:\n",
+        "    print(\"No audio files found for testing\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "PsFyxUZBlhCv",
+        "outputId": "e98701dd-218c-4a73-b6be-4f77cbf6c294"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "=== Testing Enhanced Audio Feature Extraction ===\n",
+            "Testing with: /content/drive/MyDrive/Voice/ADReSSo21-diagnosis-train/ADReSSo21/diagnosis/train/audio/cn/adrso007.wav\n",
+            "Error extracting features from /content/drive/MyDrive/Voice/ADReSSo21-diagnosis-train/ADReSSo21/diagnosis/train/audio/cn/adrso007.wav: setting an array element with a sequence. The requested array has an inhomogeneous shape after 1 dimensions. The detected shape was (263,) + inhomogeneous part.\n",
+            "✓ Audio feature extraction successful!\n",
+            "Feature vector dimension: 262\n",
+            "Feature vector shape: (262,)\n",
+            "Sample features: [0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            "\n",
+            "Testing consistency with multiple files...\n",
+            "Error extracting features from /content/drive/MyDrive/Voice/ADReSSo21-diagnosis-train/ADReSSo21/diagnosis/train/audio/cn/adrso007.wav: setting an array element with a sequence. The requested array has an inhomogeneous shape after 1 dimensions. The detected shape was (263,) + inhomogeneous part.\n",
+            "File 1: 262 features\n",
+            "Error extracting features from /content/drive/MyDrive/Voice/ADReSSo21-diagnosis-train/ADReSSo21/diagnosis/train/audio/cn/adrso018.wav: setting an array element with a sequence. The requested array has an inhomogeneous shape after 1 dimensions. The detected shape was (263,) + inhomogeneous part.\n",
+            "File 2: 262 features\n",
+            "Error extracting features from /content/drive/MyDrive/Voice/ADReSSo21-diagnosis-train/ADReSSo21/diagnosis/train/audio/cn/adrso005.wav: setting an array element with a sequence. The requested array has an inhomogeneous shape after 1 dimensions. The detected shape was (263,) + inhomogeneous part.\n",
+            "File 3: 262 features\n",
+            "Error extracting features from /content/drive/MyDrive/Voice/ADReSSo21-diagnosis-train/ADReSSo21/diagnosis/train/audio/cn/adrso002.wav: setting an array element with a sequence. The requested array has an inhomogeneous shape after 1 dimensions. The detected shape was (263,) + inhomogeneous part.\n",
+            "File 4: 262 features\n",
+            "Error extracting features from /content/drive/MyDrive/Voice/ADReSSo21-diagnosis-train/ADReSSo21/diagnosis/train/audio/cn/adrso014.wav: setting an array element with a sequence. The requested array has an inhomogeneous shape after 1 dimensions. The detected shape was (263,) + inhomogeneous part.\n",
+            "File 5: 262 features\n",
+            "✓ Feature dimensions are consistent across files\n"
           ]
         }
       ]
